--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <h1>Tasks from book JavaScript for Children</h1>
  
 </body>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </html>
