Added tasks from Chapter 12

--- a/cars.html
+++ b/cars.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks from book JavaScript for Children</title>
+    <title>Cars</title>
 </head>
 <body>
-    <h1>Tasks from book JavaScript for Children</h1>
- <!-- <script src="js/script.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
+    <script src="js/cars.js"></script>
 </body>
-
 </html>
