--- a/treasure.html
+++ b/treasure.html
@@ -9,9 +9,9 @@
 <body>
     <h1 id="heading">Find the buried treasure!</h1>
     <img id="map" width="600" height="600" src="images/treasuremap.png" alt="map">
-    <p id="distance"></p>
+    <p id="distance" height="40"></p>
     <p id="attemps"></p>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-    <script src="js/treasure.js"></script>
+    <!-- <script src="js/treasure.js"></script> -->
 </body>
 </html>
